[tool.poetry]
name = "network-api"
version = "0.1.0"
description = ""
authors = ["Alexander <alexandr.s.trushnikov@gmail.com>"]
readme = "README.md"
packages = [{include = "network_api"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.5"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
